--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -169,6 +169,19 @@ html, body {
     height: 300px;
   }
 }
+.content-wrapper .work-content .work-section-content .work-item4 {
+  display: block;
+  background: url(../../images/hs-screens-bw.jpg) no-repeat 90%;
+  height: 500px;
+  overflow: hidden;
+  background-size: Auto 500px;
+}
+@media only screen and (max-width: 500px) {
+  .content-wrapper .work-content .work-section-content .work-item4 {
+    background: url(../../images/amongstrangers.jpg) no-repeat center;
+    height: 300px;
+  }
+}
 .content-wrapper .work-content .work-section-content .see-all-work {
   text-align: center;
   height: 100px;
