--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -174,6 +174,17 @@ html, body {
           height: 300px;
         }
       }
+      .work-item4 {
+        display: block;
+        background: url(../../images/hs-screens-bw.jpg) no-repeat 90%;
+        height: 500px;
+        overflow: hidden;
+        background-size: Auto 500px;
+        @media only screen and (max-width: 500px) {
+          background: url(../../images/amongstrangers.jpg) no-repeat center;
+          height: 300px;
+        }
+      }
       .see-all-work {
         text-align: center;
         height: 100px;
