--- a/styles/sass/curran.scss
+++ b/styles/sass/curran.scss
@@ -114,6 +114,9 @@ body {
 ///////////////////////
 .content-area {
   margin: 50px 150px;
+  @media only screen and (max-width: 600px) {
+    margin: $gutter;
+  }
   section {
     color: $bg-color;
     border-bottom: 2px solid $bg-color;
@@ -150,6 +153,10 @@ body {
         padding: 0 20px 20px 0;
         // position: absolute;
         float: left;
+        @media only screen and (max-width: 600px) {
+          float: none;
+          width: 100%;
+        }
       }
     }
     h4 {
@@ -161,7 +168,12 @@ body {
   #project-info {
     padding-top: 20px;
   }
-  #my-role { height: 1100px;}
+  #my-role {
+    height: 1100px;
+    @media only screen and (max-width: 600px) {
+      height: 1600px;
+    }
+  }
   #invite { min-height: 100px;}
 }
 
