--- a/styles/sass/all-projects.scss
+++ b/styles/sass/all-projects.scss
@@ -182,6 +182,13 @@ body {background-color: $light-bg;}
     overflow: hidden;
     background-size: cover;
   }
+  .project-image4 {
+    display: block;
+    background: url(../../images/hs-screens-bw.jpg) no-repeat center top;
+    height: 300px;
+    overflow: hidden;
+    background-size: cover;
+  }
 }
 
 //global
