--- a/styles/css/all-projects.css
+++ b/styles/css/all-projects.css
@@ -159,6 +159,13 @@ body {
   overflow: hidden;
   background-size: cover;
 }
+.project-box .project-image4 {
+  display: block;
+  background: url(../../images/hs-screens-bw.jpg) no-repeat center top;
+  height: 300px;
+  overflow: hidden;
+  background-size: cover;
+}
 
 .clear {
   clear: both;
